--- a/contracts/martian-field/Cargo.toml
+++ b/contracts/martian-field/Cargo.toml
@@ -20,5 +20,7 @@ cw-storage-plus = "0.8.0"
 
 cw-asset = { version = "0.3.1", features = ["terra", "legacy"] }
 
+uint = "0.9.1"
+
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
